syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcServer";

package product;

service ProductsService {
  rpc CreateProduct (CreateProductRequest) returns (google.protobuf.Empty);
}

message CreateProductRequest {
  string name = 1;
  float price = 3;
}
